# simplex-benchmarks

./: README.md
CG/cells_batched/: application.cc  application_hp.cc  application_ph.cc
CG/components_batched/: CMakeLists.txt  application.cc
DG/cells_batched/: application.cc  application_chp.cc  application_cph.cc  application_phc.cc
DG/components_batched/: application.cc  application_helmholtz.cc
